@@ -1410,3 +1410,84 @@ data:extend{
 		},
 	},
 }
+
+--Cross Mod compatibility. Use Bob's materials, for instance.
+--[[for i, recipe in pairs(data.raw.recipe) do
+  if (string.sub(recipe.name, 1, 5) == "fill-" or string.sub(recipe.name, 1, 6) == "empty-") and recipe.category == "crafting-with-fluid" then
+    data.raw.recipe[recipe.name].category = "barrelling"
+  end
+end]]
+--[[gold-ingot
+
+
+
+"tiberium-ion-core"
+"tiberium-marv"
+"ion-turret"
+"tiberium-power-plant"
+"growth-accelerator"
+"tiberium-network-node"
+"tiberium-spike"
+"tiberium-beacon-node"
+"tiberium-aoe-node-harvester"
+"tiberium-node-harvester"]]
+--Bob's Mining Drill
+if data.raw.item["bob-mining-drill-2"] then
+	LSlib.recipe.editIngredient("tiberium-node-harvester", "electric-mining-drill", "bob-mining-drill-2", 1)
+end
+if data.raw.item["bob-mining-drill-3"] then
+	LSlib.recipe.editIngredient("tiberium-network-node", "electric-mining-drill", "bob-mining-drill-3", 1)
+end
+--Titanium
+if data.raw.item["titanium-plate"] then
+	LSlib.recipe.editIngredient("tiberium-ion-core", "steel-plate", "titanium-plate", 1)
+	LSlib.recipe.editIngredient("tiberium-marv", "steel-plate", "titanium-plate", 1)
+	LSlib.recipe.editIngredient("tiberium-power-plant", "steel-plate", "titanium-plate", 1)
+	LSlib.recipe.editIngredient("tiberium-beacon-node", "steel-plate", "titanium-plate", 1)
+	LSlib.recipe.editIngredient("tiberium-aoe-node-harvester", "steel-plate", "titanium-plate", 1)
+end
+--Gold
+if data.raw.item["gold-plate"] then
+LSlib.recipe.editIngredient("tiberium-beacon-node", "copper-plate", "gold-plate", 1)
+LSlib.recipe.editIngredient("CnC_SonicWall_Hub", "copper-plate", "gold-plate", 1)
+end
+--Steel Pipe
+if data.raw.item["steel-pipe"] then
+LSlib.recipe.editIngredient("growth-accelerator", "pipe", "steel-pipe", 1)
+LSlib.recipe.editIngredient("tiberium-network-node", "pipe", "steel-pipe", 1)
+LSlib.recipe.editIngredient("tiberium-ion-core", "pipe", "steel-pipe", 1)
+end
+--Aluminum
+if data.raw.item["aluminium-plate"] then
+LSlib.recipe.editIngredient("growth-accelerator", "steel-plate", "aluminium-plate", 1)
+LSlib.recipe.editIngredient("CnC_SonicWall_Hub", "steel-plate", "aluminium-plate", 1)
+LSlib.recipe.editIngredient("ion-turret", "steel-plate", "aluminium-plate", 1)
+
+LSlib.recipe.editIngredient("tiberium-node-harvester", "iron-plate", "aluminium-plate", 1)
+end
+--Lead
+if data.raw.item["lead-plate"] then
+LSlib.recipe.editIngredient("tiberium-empty-cell", "steel-plate", "lead-plate", 1)
+end
+--Beacon 3
+if data.raw.item["beacon-3"] then
+LSlib.recipe.editIngredient("tiberium-beacon-node", "beacon", "beacon-3", 1)
+end
+--Advanced Processing Units
+if data.raw.item["advanced-processing-unit"] then
+LSlib.recipe.editIngredient("tiberium-beacon-node", "processing-unit", "advanced-processing-unit", 1)
+
+LSlib.recipe.editIngredient("tiberium-spike", "processing-unit", "advanced-processing-unit", 1)
+end
+--Chemical Plant 2
+if data.raw.item["chemical-plant-2"] then
+LSlib.recipe.editIngredient("tiberium-power-plant", "chemical-plant", "chemical-plant-2", 1)
+end
+--Solar Panel 3
+if data.raw.item["solar-panel-3"] then
+LSlib.recipe.editIngredient("tiberium-spike", "solar-panel", "solar-panel-3", 1)
+end
+--Pumpjack 4
+if data.raw.item["bob-pumpjack-3"] then
+LSlib.recipe.editIngredient("tiberium-spike", "pumpjack", "bob-pumpjack-3", 1)
+end
